# py_simple_timeout_wrap

./: README.md  pyproject.toml
py_simple_timeout_wrap/: __init__.py  main.py
