[project]
name = "py-simple-timeout-wrap"
version = "0.1.0"
description = "A simple function execution time limit tool based on `concurrent.futures`."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
